remove flex wrap and replace with margin to fix compatibility issue on safari

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -255,7 +255,6 @@ a {
   justify-content: center;
   flex-wrap: wrap;
   justify-items: center;
-  gap: 8px;
   margin: 1em 0;
 }
 
@@ -263,6 +262,7 @@ a {
   text-align: center;
   font-weight: 700;
   padding: 6px 10px;
+  margin: 3px;
   background: $main-yellow;
   border: 1px solid $main-yellow;
   border-radius: 10px;
